# app-template

./: CMakeLists.txt  CMakePresets.json  README.md
src/: app.cpp  app.mm
src/base/: base.cpp  base.h  base_default_memory.h  base_inc.cpp  base_inc.h  base_math.cpp  base_math.h  base_memory.cpp  base_memory.h  base_string.cpp  base_string.h  base_types.cpp  base_types.h  test  test.cpp
src/gfx/: gfx.cpp  gfx.h  tinyimageformat.h
src/gfx/d3d12/: d3d12_memory_allocator.h  gfx_d3d12.cpp  gfx_d3d12.h
src/os/: os_essential.h  os_helpers.cpp  os_helpers.h  os_inc.cpp  os_inc.h  os_window.h  test.cpp
src/os/macos/: macos_entrypoint.mm  macos_essential.h  macos_essential.mm  macos_window.h  macos_window.mm  macos_window_opengl.h
src/os/win32/: win32_entrypoint.cpp  win32_essential.cpp  win32_essential.h  win32_window.cpp  win32_window.h  win32_window_opengl.h
